--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -14,7 +14,9 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://lunardeckfoxyapivault.vault.azure.net/",
+        "AZURE_USERNAME": "paperhuts.dev@gmail.com"
       }
     },
     "lunar_deck_api": {
@@ -22,7 +24,9 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "VaultUri": "https://lunardeckfoxyapivault.vault.azure.net/",
+        "AZURE_USERNAME": "paperhuts.dev@gmail.com"
       },
       "dotnetRunMessages": "true",
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
@@ -32,7 +36,11 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": true,
+      "environmentVariables": {
+        "VaultUri": "https://lunardeckfoxyapivault.vault.azure.net/",
+        "AZURE_USERNAME": "paperhuts.dev@gmail.com"
+      }
     }
   }
 }
